--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
 const HUD = document.getElementById('hud');
-const BASE = "https://a.windbornesystems.com/treasure";
+const BASE = "https://cors.isomorphic-git.org/https://a.windbornesystems.com/treasure";
 const HOURS = Array.from({length:24}, (_,i)=>String(i).padStart(2,"0"));
 
 /* ---------- helpers ---------- */
@@ -144,3 +144,4 @@ setInterval(render, 5*60*1000); // refresh every 5 minutes
 </script>
 </body>
 </html>
+
